<resources>
    <string name="app_name">Wanderlust</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="my_favorites">My Favorites</string>
    <string name="wishlist">Wishlist</string>
    <string name="visited">Visited</string>
    <string name="log_out">Log Out</string>
    <string name="about_us">About Us</string>
    <string name="arnav_jain">Arnav Jain</string>
    <string name="others">Others</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


</resources>
