<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/home"
        android:icon="@drawable/home_ui"
        android:title="@string/home" />

    <item android:id="@+id/profile"
        android:icon="@drawable/profile_prev_ui"
        android:title="@string/profile"/>

    <item android:id="@+id/fav"
        android:icon="@drawable/fav_prev_ui"
        android:title="@string/my_favorites"/>

    <item android:id="@+id/wish"
        android:icon="@drawable/wishlis_prev_ui"
        android:title="@string/wishlist"/>

    <item android:id="@+id/visit"
        android:icon="@drawable/visited_prev_ui"
        android:title="@string/visited"/>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/aboutus_prev_ui"
                android:title="@string/about_us"/>

            <item
                android:id="@+id/lgout"
                android:icon="@drawable/logout_prev_ui"
                android:title="@string/log_out"/>

        </menu>
    </item>
</menu>